@@ -1,18 +1,15 @@
 plugins {
   id 'java'
   id 'application'
-  id 'org.javamodularity.moduleplugin' version '1.8.12'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
-  id 'org.jetbrains.kotlin.jvm' version '2.1.10'
+  id 'org.javamodularity.moduleplugin' version '1.8.15'
+  id 'org.openjfx.javafxplugin' version '0.1.0'
+  id 'org.beryx.jlink' version '3.1.1'
+  id 'org.jetbrains.kotlin.jvm' version '2.1.20-RC'
+  id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
-java {
-  toolchain.languageVersion.set(JavaLanguageVersion.of(23))
-}
+group = 'org.example'
+version ='1.0-SNAPSHOT'
 
 sourceSets {
   main{
@@ -38,30 +35,56 @@ application {
 }
 
 javafx {
-  version = '23.0.1'
+  version = '23.0.2'
   modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
   implementation("org.jetbrains.kotlin:kotlin-stdlib")
-  implementation("org.openjfx:javafx-controls:23.0.1")
-  implementation("org.openjfx:javafx-fxml:23.0.1")
+  implementation("org.openjfx:javafx-controls:23.0.2")
+  implementation("org.openjfx:javafx-fxml:23.0.2")
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
 test {
-useJUnitPlatform()}
+useJUnitPlatform()
+}
 
-jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+tasks.withType(JavaExec).configureEach {
+  jvmArgs = [
+          '--module-path', '/Library/Java/Extensions/javafx-sdk-23.0.1/lib',
+          '--add-modules', 'javafx.controls,javafx.fxml'
+  ]
+}
+
+shadowJar {
+  archiveBaseName.set('BFGApp')
+  archiveVersion.set('1.0-SNAPSHOT')
+  manifest {
+    attributes(
+            'Main-Class': 'com.example.unko.BFGApplication'  // 実際の Main クラス名に変更
+    )
+  }
+}
+
+/*jlink {
+  imageDir = file("$layout.buildDirectory/libs")
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
   launcher {
-    name = 'app'
+    name = 'BinaryFileGenerator'
+  }
+  jpackage { // JAR のみを含むディレクトリ
+    outputDir = file("$layout.buildDirectory/output")
+    imageDir = file("$layout.buildDirectory/custom-jre")
+    mainClass = "com.example.unko.BFGApplication"
+    icon = file("src/main/resources/icon.ico")
+    appVersion = '1.0.0'
+    installerType = 'app-image'
   }
 }
 
 jlinkZip {
   group = 'distribution'
-}
+}*/
